# CYD_Cluster_control

./: .gitignore  lv_conf.h  platformio.ini
src/: CMakeLists.txt  filelist.txt  main.cpp  ui.c  ui.h  ui_events.h  ui_helpers.c  ui_helpers.h
src/components/: ui_comp_hook.c
src/images/: ui_img_1029853428.c  ui_img_access_denied_png.c  ui_img_arrow_png_png.c  ui_img_completed_png.c  ui_img_failed_png.c  ui_img_kubernetes_logo_without_workmark_png.c  ui_img_lock_new2_png.c  ui_img_play2_png.c  ui_img_pngwing_com_png.c  ui_img_unlock_new2_png.c
src/screens/: ui_control.c  ui_denied.c  ui_keypad.c  ui_main.c
